<resources>
    <string name="app_name">WordsFactory</string>
    <string name="empty"/>

    <!-- Failures -->
    <string name="exception_no_internet_connection">No Internet Connection</string>
    <string name="unknown_exception">UnknownError</string>
    <string name="no_authorized_exception">Not authorized</string>
    <string name="word_not_saved">Word wasn\'t saved</string>
    <string name="empty_field">Empty field</string>
  
    <!-- Dictionary -->
    <string name="bottom_nav_item_dictionary">Dictionary</string>
    <string name="bottom_nav_item_training">Training</string>
    <string name="bottom_nav_item_video">Video</string>
    <string name="dictionary_part_of_speech">Part of Speech:</string>
    <string name="dictionary_meanings">Meanings:</string>
    <string name="dictionary_add_to_dictionary">Add to Dictionary</string>
    <string name="dictionary_no_word">No word</string>
    <string name="dictionary_no_word_description">Input something to find it in dictionary</string>
    <string name="meaning_example_start">Example:</string>

    <!-- Sign Up -->
    <string name="sign_up">Sign up</string>
    <string name="signup_create_your_account">Create your account</string>
    <string name="signup_name">Name</string>
    <string name="signup_e_mail">E-mail</string>
    <string name="signup_password">Password</string>
    <string name="signup_empty_field">Поле не заполнено</string>
    <string name="signup_not_e_mail">Поле должно cодержать символ \'@\'</string>

    <!-- Onboarding -->
    <string name="onboarding_intro_1_title">Learn anytime\nand anywhere</string>
    <string name="onboarding_intro_2_title">Find a course\nfor you</string>
    <string name="onboarding_intro_3_title">Improve your skills</string>
    <string name="onboarding_intro_description">Quarantine is the perfect time to spend your\nday learning something new, from anywhere!</string>
    <string name="onboarding_button_lets_start">Let\'s Start</string>
    <string name="onboarding_button_next">Next</string>
    <string name="onboarding_skip">Skip</string>
</resources>